Regexes cleaned up. xt git test.

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -86,7 +86,7 @@ JSON::Create - fast, minimal, UTF-8-only serialization of data to JSON
 =head1 VERSION
 
 This document describes JSON::Create version [% version %],
-corresponding to git commit [% commit.commit %].
+corresponding to git commit [% commit.commit %] at [% commit.date %].
 
 =head1 DESCRIPTION
 
