Add whitespace indentation and document it
Version to 0.26_01 for testing

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -385,6 +385,15 @@ from warnings to fatal errors.
 
 [% since('0.10') %]
 
+
+=head2 indent
+
+   $jc->indent (1);
+
+Add whitespace indentation to the output.
+
+[% since('0.27') %]
+
 =head2 strict
 
     $jc->strict (1);
