Document more on indent and add a test

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -1009,6 +1009,8 @@ version 0.19.
 The L</create_json_strict> function and L</strict> methods and
 associated diagnostics were added in version 0.20.
 
+Indentation was added for objects with L</indent> in version 0.27.
+
 =head1 SEE ALSO
 
 =over
@@ -1033,11 +1035,6 @@ of JSON modules on CPAN (under "SEE ALSO").
 =item L<JSON::Create::PP>
 
 This is a backup module for JSON::Create in pure Perl.
-
-=item L<Hazy::Cosmic::Jive>
-
-This module contains the in-development floating point handling for
-JSON::Create.
 
 =back
 
