Document indent better with example; remove error from test

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -392,6 +392,8 @@ from warnings to fatal errors.
 
 Add whitespace indentation to the output.
 
+[% example('indent') %]
+
 [% since('0.27') %]
 
 =head2 strict
