--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -1063,6 +1063,21 @@ This is a backup module for JSON::Create in pure Perl.
 
 =back
 
+=head2 Blog posts
+
+There are some blog posts about the JSON::Create internals of interest
+to Perl XS programmers here:
+
+=over
+
+=item L<The mysterious case of the SVt_PVIV|http://blogs.perl.org/users/ben_bullock/2020/11/the-mysterious-case-of-the-svt-pviv.html>
+
+=item L<JSON::Create now features indentation|http://blogs.perl.org/users/ben_bullock/2020/11/jsoncreate-now-features-indentation.html>
+
+=item L<av_fetch can return NULL|http://blogs.perl.org/users/ben_bullock/2020/02/av-fetch-can-return-null.html>
+
+=back
+
 [% INCLUDE "author" %]
 
 =cut
