Grammar in documentation

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -102,7 +102,7 @@ allows specifying behaviour in more detail.
 
 JSON::Create handles no string encoding except UTF-8. It supports
 serialization of objects via user-defined callbacks. Its companion
-module L<JSON::Parse> parsing JSON into Perl.
+module L<JSON::Parse> parses JSON into Perl.
 
 Errors in processing result in a warning and an undefined return
 value. [% see('fatal_errors') %].
