Work on user-defined sort
Version to 0.28_02

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -704,6 +704,16 @@ buffer overflows within the module.
 
 [% since('0.07') %]
 
+=head3 sort
+
+   $jc->sort (1);
+
+Sort hash keys using Perl's default sorting.
+
+[% example('sort') %]
+
+[% since('0.29') %]
+
 =head3 type_handler
 
     $jc->type_handler (sub {return 'null'});
