Note on installing from the repo

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -1150,12 +1150,22 @@ This is a backup module for JSON::Create in pure Perl.
 
 =back
 
+=head2 Installing from the github repository
+
+Experimentally, it is possible to install this module from Github
+using the C<copy-stuff> branch of the repository. You will also need
+to install L<Template> and possibly some other modules, and you will
+probably also need to manually copy the file F<lib/JSON/Create.pod> to
+F<lib/JSON/Create.pod.tmpl>.
+
 =head2 Blog posts
 
 There are some blog posts about the JSON::Create internals of interest
 to Perl XS programmers here:
 
 =over
+
+=item L<Using a user-defined sort order from XS|http://blogs.perl.org/users/ben_bullock/2020/12/alles-in-ordnung.html>
 
 =item L<The mysterious case of the SVt_PVIV|http://blogs.perl.org/users/ben_bullock/2020/11/the-mysterious-case-of-the-svt-pviv.html>
 
