--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -414,7 +414,7 @@ formatting the output>. The return value is the output JSON.
 
 [% FOR v IN setvar %]
 
-=item "[% v %]"
+=item [% v %] option
 
 This corresponds to L</[% v %]>
 [%- IF v == "bool" %],
